# riscv

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.riscv-toolchain  README.md  env_setup.sh  requirements.txt  temp
documentation/: control_fsm.dot  riscv_potato.drawio
emulation/vivado/arty_s7_50/: .gitignore  Makefile  README.md  bram_memory.sv  clockInfo.txt  emu_top.sv  ila_opt.tcl
emulation/vivado/arty_s7_50/scripts/: lint.tcl  place.tcl  synth.tcl
emulation/vivado/arty_s7_50/xdc/: Arty-S7-50-Master.xdc
emulation/vivado/common/: Makefile.include
emulation/vivado/common/rtl/: bram_memory.sv
emulation/vivado/common/scripts/: bitstream.tcl  ini2hex.py  lint.tcl  opt.tcl  route.tcl  synth.tcl
emulation/vivado/ek_scu35_g/: .gitignore  Makefile  README.md  emu_top.sv
emulation/vivado/ek_scu35_g/xdc/: ek_scu35_g.xdc
emulation/vivado/ek_scu35_g/xdc/reference/: EK_SCU35_Rev3B.xdc
rtl/: byte_lane.sv  control.sv  core_top.sv  csr_alu.sv  csr_file.sv  datatypes.sv  decoder.sv  dff_init.sv  memory.sv  mux4.sv  program_register.sv  reg.sv  reg_tb.sv  regfile.sv
rtl/alu/: alu.sv  alu_tb.sv  testbench.sh
rtl/control/: branch_eval.sv  branch_eval_tb.sv  decoder.sv  imm_gen.sv  testbench.sh
rtl/tb/: README.md  core_top.gtkw  ram.sv  state.flt  testbench.sh  testbench.sv
rtl/tb/test_roms/: jmp.mem  test.mem
scripts/: analyze_fsm.py  compile_tests.sh
simulation/: CMakeLists.txt  debug_ecall.cpp  input.vc  memory_model.cpp  memory_model.h  test_ecall_debug.cpp  test_runner.cpp  test_utils.cpp
simulation/gf180_udp_replacements/: gf180_udp_verilator.v
simulation/icarus/: .gitignore  compile.sh  core_top_tb.sv  testbench
simulation/include/: test_runner.h  test_utils.h
simulation/scripts/: check_coverage_threshold.py  coverage_report.sh  run_all_tests.sh
simulation/slang/: README.md  filelist.f  lint.sh
simulation/tests/: csr_system_tests.cpp  system_tests.cpp  test_main.cpp
simulation/tests/module/: README_alu.md  README_branch_eval.md  README_decoder.md  README_imm_gen.md  alu_test.cpp  branch_eval_test.cpp  byte_lane_test.cpp  csr_alu_test.cpp  csr_file_test.cpp  decoder_test.cpp  imm_gen_test.cpp
simulation/verilator/: CMakeLists.txt  memory_model.cpp  memory_model.h  sim_main.cpp  test_runner.cpp
simulation/verilator/tests/: system_tests.cpp
simulation/verilator/tests/module/: alu_test.cpp
sw/assembler/: POTATO_assembler.py
synthesis/: Makefile  README.md
synthesis/constraints/: synth_constraints.txt
synthesis/scripts/: equiv_check.tcl  file_list.txt  gf180mcu_fd_sc_mcu9t5v0.filelist  gf180mcu_fd_sc_mcu9t5v0__tt_025C_3v30.filelist  gf180mcu_fd_sc_mcu9t5v0_verilator.filelist  gf180mcu_fd_sc_mcu9t5v0_with_udp.filelist  pdk_map.tcl  synth.tcl
test/: Dockerfile  pad.py  word_test.c
test/add/: add.dump  add.elf  add.ini  add.s  compile.sh
test/bitops/: bitops.c  bitops.dump  bitops.elf  bitops.ini  compile.sh
test/bubble_sort/: bubble_sort.c  bubble_sort.dump  bubble_sort.elf  bubble_sort.ini  compile.sh
test/byte_load_simple/: byte_load_simple.c  byte_load_simple.dump  byte_load_simple.elf  byte_load_simple.ini  compile.sh
test/csr_read_cycle/: compile.sh  csr_read_cycle.c  csr_read_cycle.dump  csr_read_cycle.elf  csr_read_cycle.ini  memory_map.ld
test/ebreak_basic/: compile.sh  ebreak_basic.c  ebreak_basic.dump  ebreak_basic.elf  ebreak_basic.ini  entry.s  memory_map.ld
test/ecall_basic/: compile.sh  ecall_basic.c  ecall_basic.dump  ecall_basic.elf  ecall_basic.ini
test/factorial/: compile.sh  factorial.c  factorial.dump  factorial.elf  factorial.ini
test/fence_basic/: compile.sh  fence_basic.dump  fence_basic.elf  fence_basic.ini  fence_basic.s
test/fence_i/: compile.sh  fence_i.dump  fence_i.elf  fence_i.ini  fence_i.s
test/fence_ordering/: compile.sh  fence_ordering.dump  fence_ordering.elf  fence_ordering.ini  fence_ordering.s
test/fibonacci/: compile.sh  entry.s  fibonacci.c  fibonacci.dump  fibonacci.elf  fibonacci.ini
test/gcd/: .gitignore  compile.sh  entry.s  gcd.c  gcd.dump  gcd.elf  gcd.ini  memory_map.ld
test/gcd/ld/: entry.s
test/gcd/src/: gcd.c
test/memcpy/: compile.sh  memcpy.c  memcpy.dump  memcpy.elf  memcpy.ini
test/multiply/: compile.sh  multiply.c  multiply.dump  multiply.elf  multiply.ini
test/prime/: compile.sh  prime.c  prime.dump  prime.elf  prime.ini
test/strlen/: compile.sh  strlen.c  strlen.dump  strlen.elf  strlen.ini
test/subtract/: compile.sh  memory_map.ld  subtract.c  subtract.dump  subtract.elf  subtract.ini  subtract.s
